Develop 2.0.x initial works 2 (#13)
* Improve JavaDoc comments adn correct image location.
* Define skeleton of documentation structure.

---------

Authored-by: Hiroshi Ukai <dakusui@gamil.com>

--- a/src/main/java/com/github/dakusui/valid8j/pcond/fluent/package-info.adoc
+++ b/src/main/java/com/github/dakusui/valid8j/pcond/fluent/package-info.adoc
@@ -24,15 +24,15 @@ public class FluentStyleExample {
     // Check if
     // - The last name of the entry is not null and not an empty string.
     // - The last name is "DOE".
-    assertWhen(
+    assertStatement(
         value(lastName)
-            .then()
-            .verifyWith(allOf(
+            .satisifies()
+            .predicate(allOf(
                 isNotNull(),
                 not(isEmptyString()))),
         value(fullName).asListOfClass(String.class)
-            .then()
-            .contains("DOE"));
+            .satisfies()
+            .containing("DOE"));
   }
 }
 ----
