--- a/src/site/asciidoc/rip/valid8j-overview.adoc
+++ b/src/site/asciidoc/rip/valid8j-overview.adoc
@@ -1,15 +1,35 @@
+// suppress inspection "GrazieInspection" for whole file
 // suppress inspection "SpellCheckingInspection" for whole file
 :toc:
 :toclevels: 4
 
-= `thincrest-pcond`: Test Assertion Library
+= `valid8j-pcond`: Unified DbC, Value Checking, Test Assertion Library
 
-`thincrest-pcond` is a test assertion library named after `hamcrest`<<hamcrest>> and it is at the same time a pun for "think the rest".
-It uses `pcond`, instead of `Matcher` used by `hamcrest`, for a mechanism to compose human-readable messages.
-The benefit of `pcond` over `hamcrest` is its compatibility and extensibility because they are not relying on custom classes like `Matcher` but on Java's plain `Predicate`.
-It is why it is "thinner" than `hamcrest`.
-It also provides useful preset predicates from which you can build your own for more complex types and checks.
-So, you can reuse the predicates you created across different use cases such as value-checking<<GuavaPreconditions>>, DbC contracts<<DbC>>, or test assertions.
+`valid8j` (pronounced "validate-j") is a DbC (design by contract<<DbC>>) library named after `valid4j`<<valid4j>>.
+
+It can be also used as a value chcking library such as Guava's `Preconditions` class or a test assertion library like AssertJ or Google Truth.
+
+One thing to be noted here is that it offers uniformed and consistent way of doing these unlike any other existing libraries.
+At the same time, it offers readability both in codes and in messages on failures.
+Not only that, it provides a fluent programming interface where your IDE help you come up with what you want to write next.
+
+The benefit of `pcond` over `hamcrest` is its compatibility and extensibility.
+Instead of "matchers" that `hamcrest` uses to verify values, `pcond` uses Java's plain `Predicate` and provide useful preset predicates from which you can build your own predicates for complex types.
+So, you can reuse the predicates you created for assertions for other purposes, such as value checking and testing.
+
+A design idea behind `pcond` is following:
+When a human checks test results, he/she wants to "see" the values on a display screen as texts.
+But what sort of values they can check?
+Numbers, texts, boolean, null, or compound values of them.
+Database records, HTTP requests, responses, List, Map, ... they can be decomposed into the handful of value types.
+If cannot, they cannot be understood by human, either way.
+If so, when a human checks such a complex value, what human does will be to extract a certain aspect of the original complex value as a simple value and check if it satisfies a certain predicate for a simple value type.
+If so, the mechanism we desire for a versatile assertion library is not to be able to build a matcher for any types, but to be able to define a function to "transform"  a given object to a simple value, and provide a useful and preset predicates sufficient for checking the extracted value.
+
+This allows you to use the library for your custom class very easily.
+
+Not only that, it allows "no-overhead" execution of assertions, which gives no performance penalty at production code, yet keeping its descriptiveness on failures.
+
 
 == Getting Started
 
@@ -20,24 +40,24 @@ Have a following maven dependency in your `pom.xml`.
 ----
 <dependency>
   <groupId>com.github.dakusui</groupId>
-  <artifactId>thincrest-pcond</artifactId>
-  <version>{thincrest-pcond-version}</version>
+  <artifactId>valid8j-pcond</artifactId>
+  <version>{valid8j-pcond-version}</version>
 </dependency>
 ----
 
-Visit https://oss.sonatype.org/[oss.sonatype.org] to figure out the most recent version of `thincrest-pcond`.
+Visit https://oss.sonatype.org/[oss.sonatype.org] to figure out the most recent version of `valid8j-pcond`.
 
 == Programming with `pcond` twins
 
-`thincrest` and `valid8j` are twins of `pcond` and both libraries for value checking, but intended to be used in respectively different contexts.
-`thincrest` is desinged to be used in test assertions, while `valid8j` should be used for Design by Contract style programming and general value checking in production code.
+`valid8j` and `valid8j` are twins of `pcond` and both libraries for value checking, but intended to be used in respectively different contexts.
+`valid8j` is desinged to be used in test assertions, while `valid8j` should be used for Design by Contract style programming and general value checking in production code.
 In these contexts, how to build a condition to check a value and compose an appropriate message for its failure are common concern.
 However, there is no uniformed style that can be applied to all those.
 `pcond` and its twins are designed to address this challenge.
 
 === First Example
 
-Following is the first example of the `thincrest-pcond` library.
+Following is the first example of the `valid8j-pcond` library.
 
 [%nowrap,java]
 .ThincrestExample.java
@@ -75,7 +95,7 @@ public class ThincrestExample {
 }
 ----
 
-The programming style of `thincrest-pcond` (or `pcond` in more general) is to first transform a given value into better known type or form, which is more suitable for examining its validity.
+The programming style of `valid8j-pcond` (and `valid8j-pcond` in more general) is to first transform a given value into better known type or form, which is more suitable for examining its validity.
 
 In this example, a given string is first transformed into all upper cases so that it is equal to "HELLO" if we ignore cases.
 
@@ -111,24 +131,24 @@ HOWDY, WORLD
 
 You can see the violated condition and how it is violated in the stacktrace.
 
-A philosophy behind `thincrest-pcond` 's (and also `valid8j-pcond` 's) approach is:
+A philosophy behind `valid8j-pcond` 's (and also `valid8j-pcond` 's) approach is:
 
 - A human in the end checks the value on a screen as a text.
 - Either way, test can only report a presence of a bug, cannot ensure absence of it.
 If so, rather than trying to build "matcher", "subject", or "assertion" objects that can do a check that detects all the bugs for a given class, it will be more productive to decompose the check into various checks, each of which is concise and understandable.
 
-The style of `thincrest`, where you pass a value and a predicate that checks it to a library entry-point method, is the same for `valid8j`.
+The style of `valid8j`, where you pass a value and a predicate that checks it to a library entry-point method, is the same for `valid8j`.
 
 === "Printable" Predicate
 
-To verify a value with `thincrest` or `valid8j`, you can call a value checking method of them with your value and a predicate to be checked.
+To verify a value with `valid8j` or `valid8j`, you can call a value checking method of them with your value and a predicate to be checked.
 
 [source]
 ----
 valueCheckingMethod(aValue, predicate);
 ----
 
-Value checking methods are defined as public static methods in classes such as `TestAssertions`(`thincrest-pcond`) or `Requires`(`valid8j-pcond`).
+Value checking methods are defined as public static methods in classes such as `TestAssertions`(`valid8j-pcond`) or `Requires`(`valid8j-pcond`).
 It is recommended to import them statically at the beginning of your class.
 
 You can give your own lambda as a predicate to the method, however it will result in non-user friendly string such as following.
@@ -139,9 +159,9 @@ Exception in thread "main" java.lang.IllegalArgumentException: value:"JohnDoe" v
 ----
 
 This is still better than nothing, however, probably it will be much better if you can see what a condition the value "JohnDoe" violated and how it did without visiting the source code.
-In order to make `thincrest` and `valid8j` print a better message on a failure, you need to give a "printable" predicate.
+In order to make `valid8j` and `valid8j` print a better message on a failure, you need to give a "printable" predicate.
 
-`pcond`, which powers `thincrest` and `valid8j`, offers a set of method to create a printable predicate in `Predicates` class.
+`pcond`, which powers `valid8j` and `valid8j`, offers a set of method to create a printable predicate in `Predicates` class.
 It also offers a way to construct a conjunction, disjunction, and negation of given printable predicates.
 
 To create a non-printable function and predicate, you can use static methods in `Printables` class.
@@ -212,9 +232,9 @@ With this `transform` and `check` approach, you can build various printable pred
 `pcond` offers a couple of styles to build conditions, one is conventional, which we already used in the examples in the earlier sections.
 The other is "fluent" style, which will be covered in this section.
 
-For each of them, `thincrest` and `valid8j` have different set of classes and methods.
+For each of them, `valid8j` and `valid8j` have different set of classes and methods.
 
-==== Conventional Value Checking Methods of `thincrest-pcond`
+==== Conventional Value Checking Methods of `valid8j-pcond`
 
 In this category, there are only a couple of static methods.
 For both of them, the first parameter is a value to be checked and the second is a (printable) predicate used for the check.
@@ -228,15 +248,15 @@ If it fails, it means your product doesn't compile on Linux.
 So, you want it to be ignored.
 In this situation, you can write `assumeThat(isRunningOnWindowsPlatorm())` and `AssumptionViolatedException`, which make JUnit4 mark the test ignored,  will be thrown.
 
-==== Fluent Value Checking Methods of `thincrest-pcond`
+==== Fluent Value Checking Methods of `valid8j-pcond`
 
 Methods end with `Statement` accepts only one `Statement`, while ones end with `All` accepts multiple statements.
 Basically, they are doing the same thing and just defined as "syntax-sugara" for readability's sake.
 
-`assertStatement` (`TestAssertions`):: Use this for normal test assertions.
-`assertAll` (`TestAssertions`):: Use this for normal test assertions, where you need to check multiple values at once.
-`assumeStatement` (`TestAssertions`):: Use this for checking an assumption to execute a test is satisfied or not.
-`assumeAll` (`TestAssertions`):: Use this for checking an assumption to execute a test is satisfied or not in a situation, where you need to check multiple conditions at once.
+`assertStatement` (`TestFluents`):: Use this for normal test assertions.
+`assertAll` (`TestCluents`):: Use this for normal test assertions, where you need to check multiple values at once.
+`assumeStatement` (`TestFluents`):: Use this for checking an assumption to execute a test is satisfied or not.
+`assumeAll` (`TestFluents`):: Use this for checking an assumption to execute a test is satisfied or not in a situation, where you need to check multiple conditions at once.
 
 For the detail of how to create a statement object, check <<WritingYourCodeFluently>>.
 
@@ -300,7 +320,7 @@ If so, the value for `amount` will not be 0 or less.
 This is a "belief" that can be checked by `assert` statement.
 <4> If `this.balance` becomes less than 0, we should think we are detecting an internal error.
 In production, this check is useless and just a performance over-head, because such bugs should be fixed before releasing.
-Such a check should be done with `assert` so that it can be turned of  in production.
+Such a check should be done with `assert` so that it can be turned off  in production.
 
 
 ==== Fluent Value Checking Methods of `valid8j-pcond`
@@ -390,11 +410,12 @@ That is, if you have an `or` condition, and the first predicate under it becomes
 So the last line in the message always shows the direct reason why the check failed.
 
 Thus, you can read the output above as "The check failed because the value `\"JohnDoe\"` `containsString[" "]` was `false`.
+"
 
 [[WritingYourCodeFluently]]
 === Writing your Code Fluently
 
-Following is an example that illustrates how to use "Fluent" API of `thincrest-pcond` to build a test.
+Following is an example that illustrates how to use "Fluent" API of `valid8j-pcond` to build a test.
 
 [source,java]
 ----
@@ -524,19 +545,19 @@ a|
 
 In this example, it seems `Salute#inEnglish` method contains a bug, where its return value becomes a string without length.
 
-== Using Together with `thincrest` and `valid8j`
+== Using Together with `valid8j` and `valid8j`
 
-When you use both `thincrest-pcond` and `valid8j-pcond` in one project, please be careful at package names of classes you are going to use.
+When you use both `valid8j-pcond` and `valid8j-pcond` in one project, please be careful at package names of classes you are going to use.
 They both use `pcond` to render messages from predicates.
-But the classes from `pcond` are stored under `com.github.dakusui.thincrest_pcond` in `thincrest-pcond`.
+But the classes from `pcond` are stored under `com.github.dakusui.valid8j_pcond` in `valid8j-pcond`.
 `valid8j` does the same.
 Classes from `pcond` are stored under `com.github.dakusui.valid8j_pcond` in `valid8j-pcond`.
-If you create a predicate using `com.github.dakusui.valid8j_pcond.forms.Predicates`, for instance, the `thincrest` 's mechanism to compose error messages from predicates cannot do its work.
+If you create a predicate using `com.github.dakusui.valid8j_pcond.forms.Predicates`, for instance, the `valid8j` 's mechanism to compose error messages from predicates cannot do its work.
 Because the predicates created by `valid8j-pcond` 's classes will look just normal `Predicate`, not ones that have mechanism to print it, the message will look much poorer than it can be.
 
-The other way around will not happen (fortunately) because `thincrest-pcond` will be a dependency in `test` scope, and it will not be visible from the production scope, which `valid8j-pcond` is usually used.
+The other way around will not happen (fortunately) because `valid8j-pcond` will be a dependency in `test` scope, and it will not be visible from the production scope, which `valid8j-pcond` is usually used.
 
-== Building the `thincrest-pcond` Library
+== Building the `valid8j-pcond` Library
 
 === How to Build the Project
 
@@ -554,6 +575,15 @@ Docs:: `mvn clean compile test site`, you will see generated docs under `target/
 [bibliography]
 == References
 
+- [[[DbC, 1]]] Wikipedia article on Design by Contract, https://en.wikipedia.org/wiki/Design_by_contract[Design by contract]
+- [[[valid4j, 2]]] valid4j https://www.valid4j.org/[valid4j.org]
+- [[[pcond, 3]]] pcond https://dakusui.github.io/pcond/[github.com/pcond]
+- [[[v4j, 4]]] Valid4j, http://www.valid4j.org[valid4j.org]
+- [[[GuavaPreconditions, 5]]] PreconditionsExplained, https://github.com/google/guava/wiki/PreconditionsExplained[PreconditionsExplained]
+- [[[hamcrest, 6]]] Hamcrest https://hamcrest.org/[hamcrest.org]
+- [[[assertions, 7]]] Programming With Assertions https://docs.oracle.com/javase/8/docs/technotes/guides/language/assert.html[Programming With Assertions]
+- [[[Preconditions-guava, 8]]] Preconditions, Google Guava https://guava.dev/releases/19.0/api/docs/com/google/common/base/Preconditions.html[Preconditions class]
+- [[[Validates-apache-commons, 9]]] Validates, Apache Commons https://commons.apache.org/proper/commons-lang/apidocs/org/apache/commons/lang3/Validate.html[Validate class]
 - [[[DbC, 1]]] Wikipedia article on Design by Contract, https://en.wikipedia.org/wiki/Design_by_contract
 - [[[v4j, 2]]] Valid4j, http://www.valid4j.org
 - [[[GuavaPreconditions, 3]]] PreconditionsExplained, https://github.com/google/guava/wiki/PreconditionsExplained
