--- a/src/site/asciidoc/valid8j-5-advanced-topics.adoc
+++ b/src/site/asciidoc/valid8j-5-advanced-topics.adoc
@@ -12,6 +12,4 @@
 == Customizing exceptions to be thrown
 (t.b.d.)
 
-include::valid8j-index.adoc[]
-
-include::valid8j-bibliography.adoc[]
+include::valid8j-footer.adoc[]
