--- a/src/site/asciidoc/valid8j-9-support.adoc
+++ b/src/site/asciidoc/valid8j-9-support.adoc
@@ -4,6 +4,4 @@
 If you find any, please check https://github.com/dakusui/valid8j/issues[Issues in GitHub] and file a new one if you don't find your problem.
 The source code is found https://github.com/dakusui/valid8j[here].
 
-include::valid8j-index.adoc[]
-
-include::valid8j-bibliography.adoc[]
+include::valid8j-footer.adoc[]
