--- a/src/site/asciidoc/valid8j-4-guides-and-tutorials.adoc
+++ b/src/site/asciidoc/valid8j-4-guides-and-tutorials.adoc
@@ -107,6 +107,4 @@ Mismatch>:[0]      ->      <[100]      ->false
 ----
 
 
-include::valid8j-index.adoc[]
-
-include::valid8j-bibliography.adoc[]
+include::valid8j-footer.adoc[]
