--- a/src/site/asciidoc/valid8j-6-limitations-and-future-works.adoc
+++ b/src/site/asciidoc/valid8j-6-limitations-and-future-works.adoc
@@ -8,6 +8,4 @@ Cleaning Up Fluent Interface::
 Author developed the fluent programming model by trial and error through dogfooding.
 So, the interface may not be consistent and experience incompatible changes in the future for improvement.
 
-include::valid8j-index.adoc[]
-
-include::valid8j-bibliography.adoc[]
+include::valid8j-footer.adoc[]
